--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>hCaptcha — проверка доступа</title>
+    <title>YTcutter</title>
     <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
     <style>
         body {
