--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>YTcutter</title>
+    
     <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
     <style>
         body {
@@ -36,6 +37,7 @@
         }
     </style>
 </head>
+<link rel="icon" href="https://github.com/kostyamessanger/ytcutter/blob/main/favicon.png?raw=true" type="image/x-icon">
 <body>
     <!-- Блок с формой проверки (видимый изначально) -->
     <div id="accessForm">
