--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>YTcutter</title>
     
     <link rel="icon" 
-          href="https://github.com/kostyamessanger/ytcutter/blob/main/favicon.png?raw=true"
+          href="https://kostyamessanger.github.io/Images/img/ytcutter-icon.html"
           type="image/png">
     
     <!-- Скрипт hCaptcha -->
